# pytest-test-groups

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.rst  SECURITY.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml  linting.yml  publish.yml  python-tests.yml  scorecard.yml
pytest_test_groups/: __init__.py
tests/: test_groups.py  test_pytest.py
